# Gemini

./: data.txt  main.py  pyproject.toml
